# transcript_transformer

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py  template.yml
data/: example_data.fa
tests/: test_cli.py
tests/configs/: ribotie_bam_loading.yml  ribotie_pretraining.yml  ribotie_sam_loading.yml  ribotie_training.yml  template_sam.yml  tis_transformer_loading.yml  tis_transformer_training.yml
tests/dbs/: ribotie_pretraining.h5  ribotie_training.h5
transcript_transformer/: __init__.py  argparser.py  data.py  models.py  processing.py  riboformer.py  ribotie.py  tis_transformer.py  transcript_loader.py  transcript_transformer.py  util_functions.py
transcript_transformer/configs/: riboformer_defaults.yml  ribotie_defaults.yml  tis_transformer_defaults.yml
transcript_transformer/pretrained/riboformer_models/: 50perc_06_23.yml
transcript_transformer/pretrained/ribotie_models/: 50perc_06_23.yml
transcript_transformer/pretrained/tis_transformer_models/: default_config.yml
