[metadata]
name = transcript_transformer
author = Jim Clauwaert
description = Transformers for Transcripts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jdcla/transcript_transformer
license_files = LICENSE

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires = 
    pytorch-lightning >= 2.0.0 
    tensorboard >= 2.12.3
    torchmetrics >= 0.11.3
    performer-pytorch >= 1.1.4
    local-attention == 1.7.1
    h5py >= 3.6.0
    numpy >= 1.21.0
    scipy >= 1.7.3
    pandas >= 2.0.1
    pyarrow >= 12.0.1
    h5max >= 0.3.0
    fasta-reader >= 3.0.1
    polars == 0.16.13
    tqdm >= 4.65.0
    gtfparse >= 2.0.1
    pyfaidx >= 0.7.2.1

[options.entry_points]
console_scripts =
    transcript_transformer = transcript_transformer.transcript_transformer:main
    riboformer = transcript_transformer.riboformer:main
