[metadata]
name = transcript_transformer
author = Jim Clauwaert
description = Transformers for Transcripts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jdcla/transcript_transformer
license_files = LICENSE

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires = 
    pytorch-lightning == 2.0.9 
    tensorboard == 2.14.0
    torchmetrics == 1.1.2
    performer-pytorch == 1.1.4
    local-attention == 1.7.1
    h5py == 3.9.0
    numpy >= 1.21.0
    scipy >= 1.11.2
    pandas >= 2.0.3
    biobear == 0.13.7
    pyarrow >= 13.0.0
    h5max == 0.3.2
    fasta-reader == 3.0.2
    polars == 0.19.17
    tqdm == 4.66.1
    gtfparse_transcript_transformer == 2.0.3
    pyfaidx == 0.7.2.1

[options.entry_points]
console_scripts =
    transcript_transformer = transcript_transformer.transcript_transformer:main
    riboformer = transcript_transformer.riboformer:main
    tis_transformer = transcript_transformer.tis_transformer:main
