[metadata]
name = transcript-transformer
version = 0.9.10
author = Jim Clauwaert
description = Transformers for Transcripts
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/jdcla/transcript_transformer"
license_files = LICENSE

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires = 
    pytorch-lightning >= 2.2.1 
    tensorboard >= 2.16.2
    torchmetrics >= 1.1.2
    performer-pytorch == 1.1.4
    local-attention == 1.7.1
    h5py >= 3.11.0
    numpy >= 1.26.4
    scipy >= 1.13.0
    pandas >= 2.2.2
    biobear >= 0.23.7
    pyarrow >= 18.0.0
    h5max == 0.3.2
    fasta-reader == 3.0.2
    polars == 1.28
    tqdm >= 4.66.2
    pyfaidx == 0.8.1.1
    gtfparse-transcript-transformer == 2.5.0

[options.entry_points]
console_scripts =
    ribotie = transcript_transformer.ribotie:main
    tis_transformer = transcript_transformer.tis_transformer:main

[options.packages.find]
where = .
# exclude =
#     configs/*
#     pretrained/*
